app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@menu-button-color: #6215e1;
@hover-button-color: #4c0fbf;
@catalog-topnav-text-color: #ffffff;

body{
    font-family: 'Poppins-Regular' !important;
}

.action.primary, 
.action.tocart.primary,
.action.primary.checkout,
.button.action.continue.primary,
.review-form .action.submit.primary,
.action.update,
.action.share,
.action.tocart,
.action.action-update,
.action.action-login.secondary,
.action.reload.captcha-reload,
.action.action-show-popup,
.action.action-edit-address,
.action.action-select-shipping-item {
    background: @menu-button-color;
    border-color: @menu-button-color;
    color: @catalog-topnav-text-color;
    font-family: 'Poppins-Regular' !important;
    border-radius: 10px;

    &:hover{
        background: @hover-button-color;
        border-color: @hover-button-color;
        transform: scale(1.03);
        color: @catalog-topnav-text-color;
    }

    &:active{
        background: @menu-button-color;
        border-color: @menu-button-color;
        color: @catalog-topnav-text-color;
    }
    &:focus{
        background: @menu-button-color;
        border-color: @menu-button-color;
        color: @catalog-topnav-text-color;
    }
}

.action.subscribe.primary{
    border-radius:unset;
}

.action.action-apply,
.action.apply.primary {
    background: @menu-button-color !important;
    color: @catalog-topnav-text-color !important;
    box-shadow: unset !important;
    border-radius: 0 5px 5px 0 !important;

    &:hover{
        background: @hover-button-color !important;
        transform: scale(1.03) !important;
    }
}

.action.create.primary,
.action.login.primary,
.action.update,
.action.action-login.secondary,
.action.reload.captcha-reload,
.action.submit.primary,
.action.share,
.action.tocart,
.action.action-show-popup,
.action.action-edit-address,
.action.action-select-shipping-item {
    border-radius: 5px !important;
}

.modal-footer{
    .action-primary.action-accept{
        background: @menu-button-color;
        border-color: @menu-button-color;
    }
}

.product-info-main{
    .custom-product-page{
        margin-bottom: 20px;
        font-family: 'Poppins-Regular';
        text-transform: uppercase;
        font-size: 1.8rem;
    }
}

